Aligned columns to header & fixed console warnings

--- a/grid-junior/src/Grid/GridBody/GridRows/Row.scss
+++ b/grid-junior/src/Grid/GridBody/GridRows/Row.scss
@@ -1,6 +1,6 @@
 .row {
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    padding-left: 0.5rem;
-    padding-right: 0.5rem;
 }
