--- a/grid-junior/src/Grid/GridBody/GridRows/RowContainer.scss
+++ b/grid-junior/src/Grid/GridBody/GridRows/RowContainer.scss
@@ -1,7 +1,5 @@
 .row-container {
     overflow: hidden;
-    padding-left: 0.5rem;
-    padding-right: 0.5rem;
     background-color: #1f1d1d;
     color: white;
 }
